<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.module_activities.TaxisOnMapActivity">

    <include layout="@layout/custom_actionbar"/>

    <TextView
        style="@style/style_text_header"
        android:text="@string/available_vehicles_in_hamburg_area" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:layout_marginTop="@dimen/general_app_margin_half"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.module_activities.TaxisOnMapActivity" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:alpha="0.8"
            android:id="@+id/bottomVehicleInfoLL"
            android:paddingTop="@dimen/general_app_margin_half"
            android:paddingBottom="@dimen/general_app_margin_half"
            android:background="@android:color/white"
            android:layout_height="wrap_content">


            <!--<TextView
                style="@style/style_text_header"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/general_app_margin"
                android:text="We have found 30 vehicles in Hamburg area." />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/general_app_margin_half"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/general_app_margin"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="36dp"
                        android:src="@drawable/ic_annotation_taxi"
                        android:layout_height="36dp" />
                    <TextView
                        style="@style/style_text_header"
                        android:gravity="start"
                        android:layout_width="wrap_content"
                        android:paddingStart="@dimen/general_app_margin_half"
                        android:text="@string/taxi" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/general_app_margin"
                    android:layout_marginEnd="@dimen/general_app_margin"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="36dp"
                        android:src="@drawable/ic_annotation_taxi_poolling"
                        android:layout_height="36dp" />
                    <TextView
                        style="@style/style_text_header"
                        android:gravity="start"
                        android:layout_width="wrap_content"
                        android:paddingStart="@dimen/general_app_margin_half"
                        android:text="@string/pooling_taxi" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>



</LinearLayout>